# duck-takes-flight

./: .gitignore  README.md  duckdb_flight_server.py  load_data.py  pyproject.toml  pytest.ini  query_data.py  requirements.txt  test.py  test_client.py
.github/workflows/: publish.yml  test.yml
src/duck_takes_flight/: __init__.py  cli.py  client.py  logging.py  server.py
tests/: conftest.py
tests/integration/: test_client_server.py
tests/unit/: test_cli.py  test_client.py  test_server.py
